Update footer with dynamic year and modify styles for footer links

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -521,6 +521,10 @@ footer {
   gap: 4rem 2rem;
 }
 
+.footer__bar a{
+  color: var(--primary-color);
+}
+
 .footer__col p {
   max-width: 300px;
   margin-block: 2rem;
